# pdfdoc_extraction

./: .coveragerc  .gitignore  AGENTS.MD  README.md  audit-review-laptop-1366x768.md  design-qa.md  fts_config org.yaml  fts_config v2.yaml  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  security_best_practices_report.md  security_remediation_checklist.md  tailwind.config.js
.playwright-mcp/: page-2026-06-03T07-46-12-460Z.yml  page-2026-06-03T07-46-40-367Z.yml  page-2026-06-03T07-46-47-877Z.yml  page-2026-06-03T07-47-14-426Z.yml  page-2026-06-03T07-47-51-771Z.yml  page-2026-06-12T06-32-08-227Z.yml  page-2026-06-12T06-32-45-334Z.yml  page-2026-06-12T06-32-59-458Z.yml  page-2026-06-28T13-40-44-622Z.yml  page-2026-06-28T13-41-38-176Z.yml  page-2026-06-28T13-41-56-042Z.yml  page-2026-07-05T07-53-09-067Z.yml  page-2026-07-05T07-53-23-239Z.yml  page-2026-07-05T07-53-40-389Z.yml  page-2026-07-05T07-53-49-724Z.yml  page-2026-07-05T07-54-14-292Z.yml  page-2026-07-05T07-54-46-663Z.yml
docs/: admin_ui_ux_review.md  config_check_troubleshooting.md  design_architecture.md  llamacloud_extract_v2_migration.md  review_schema_admin_guide.md  user_guide.md
modules/: api_router.py  auth_utils.py  base_task.py  config_manager copy.py  config_manager.py  config_protocol.py  exceptions.py  file_processor.py  logging_config.py  resume_manager.py  shutdown_manager.py  status_manager.py  utils.py  watch_folder_monitor.py  workflow_loader.py  workflow_manager.py
pipeline_visual_editor_prototype/: design-qa.md  index.html  (+4 more)
(+310 files in other folders)
